--- a/views/page1.hbs
+++ b/views/page1.hbs
@@ -1,4 +1,4 @@
 <div>page 1</div>
-<img src="{{picture}}">
-<a href="{{url}}">{{url}}</a>
-<div>{{text1}}</div>
+
+<div>{{text}}</div>
+<div>{{{text}}}</div>
