--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,14 +5,14 @@
 	</head>
 	<body>
 		<header>
-			{{> header/menu.hbs}}
+			{{> header/menu}}
 		</header>
 		<main>
 			<div>index</div>
-			{{{> body/body.hbs}}}
+			{{> body/body}}
 		</main>
 		<footer>
-			{{> footer/contact.hbs}}
+			{{> footer/contact}}
 		</footer>
 	</body>
 </html>
