--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,11 +11,9 @@
 	</header>
 	<main>
 		<div>index</div>
-		<div>
-			{{product.name}}
-			{{product.cost}}
-		</div>
-
+		<div>{{products.[0]}}</div>
+		<div>{{products.[1]}}</div>
+		<div>{{products.[2]}}</div>
 	</main>
 	<footer>
 		{{!-- {{> footer/contact}} --}}
