--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,8 @@
 	<main>
 		<div>index</div>
 		<div>{{#with product}}
-			{{name}} {{cost}}
+			Object {{name}} {{cost}} {{amount}}
+			<div>{{../amount}}</div>
 			{{/with}}
 		</div>
 	</main>
