--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,8 @@
 	</header>
 	<main>
 		<div>index</div>
+
+		<div>current date: {{getDate}} </div>
 		{{!-- <div>{{#with product}}
 			Object {{name}} {{cost}} {{amount}}
 			<div>{{../amount}}</div>
@@ -21,7 +23,7 @@
 			<li>{{.}}</li>
 			{{/each}}
 		</ul> --}}
-		<div>
+		{{!-- <div>
 			{{#if show1}}
 			<div>show1</div>
 			{{/if}}
@@ -31,7 +33,7 @@
 			{{#if show3}}
 			<div>show3</div>
 			{{/if}}
-		</div>
+		</div> --}}
 	</main>
 	<footer>
 		{{!-- {{> footer/contact}} --}}
