Passing Parameters to Helpers in Handlebars

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,8 +11,8 @@
 	</header>
 	<main>
 		<div>index</div>
-
-		<div>current date: {{getDate}} </div>
+		{{!-- {{square 16}} --}}
+		{{!-- <div>current date: {{getDate}} </div> --}}
 		{{!-- <div>{{#with product}}
 			Object {{name}} {{cost}} {{amount}}
 			<div>{{../amount}}</div>
