--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,7 @@
 	</header>
 	<main>
 		<div>index</div>
+		{{!-- {{num 5.54}} --}}
 		{{!-- {{square 16}} --}}
 		{{!-- <div>current date: {{getDate}} </div> --}}
 		{{!-- <div>{{#with product}}
