Passing Parameters to Helpers in Handlebars

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,8 @@
 	</header>
 	<main>
 		<div>index</div>
-		{{word 'bye'}}
+		{{!-- {{date '12-02-2023'}} --}}
+		{{!-- {{word 'bye'}} --}}
 		{{!-- {{sum 5 5 5}} --}}
 		{{!-- {{num 5.54}} --}}
 		{{!-- {{square 16}} --}}
