--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,9 +11,14 @@
 	</header>
 	<main>
 		<div>index</div>
-		<div>{{date date1}}</div>
+		{{#each obj}}
+		<div>
+			{{date}}
+		</div>
+		{{/each}}
+		{{!-- <div>{{date date1}}</div>
 		<div>{{date date2}}</div>
-		<div>{{date date3}}</div>
+		<div>{{date date3}}</div> --}}
 		{{!-- {{date '12-02-2023'}} --}}
 		{{!-- {{word 'bye'}} --}}
 		{{!-- {{sum 5 5 5}} --}}
