Helper combinations in Handlebars

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,11 +11,14 @@
 	</header>
 	<main>
 		<div>index</div>
-		{{#each obj}}
+		{{!-- <div>{{cube (square 3)}}</div>
+		<div>{{sum (square 3) (cube 4)}}</div>
+		<div>{{sum (square 3) 4}}</div> --}}
+		{{!-- {{#each obj}}
 		<div>
 			{{date}}
 		</div>
-		{{/each}}
+		{{/each}} --}}
 		{{!-- <div>{{date date1}}</div>
 		<div>{{date date2}}</div>
 		<div>{{date date3}}</div> --}}
