Passing Objects to Helpers in Handlebars

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,7 @@
 	</header>
 	<main>
 		<div>index</div>
+		{{!-- <div>{{purchase.name}} {{sum purchase}}</div> --}}
 		{{!-- <div>{{cube (square 3)}}</div>
 		<div>{{sum (square 3) (cube 4)}}</div>
 		<div>{{sum (square 3) 4}}</div> --}}
