--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,11 @@
 	</header>
 	<main>
 		<div>index</div>
+		<div>
+			{{#each purchases}}
+			{{ sum}}
+			{{/each}}
+		</div>
 		{{!-- <div>{{purchase.name}} {{sum purchase}}</div> --}}
 		{{!-- <div>{{cube (square 3)}}</div>
 		<div>{{sum (square 3) (cube 4)}}</div>
