--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,10 @@
 	</header>
 	<main>
 		<div>index</div>
-		<div>
+		<p>
+			{{{link 'http://www.google.ru' 'главная'}}}
+		</p>
+		{{!-- <div>
 			<ul>
 				{{#each purchases}}
 				<li>
@@ -19,8 +22,7 @@
 				</li>
 				{{/each}}
 			</ul>
-
-		</div>
+		</div> --}}
 		{{!-- <div>{{purchase.name}} {{sum purchase}}</div> --}}
 		{{!-- <div>{{cube (square 3)}}</div>
 		<div>{{sum (square 3) (cube 4)}}</div>
