Local Helpers in Handlebars

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,9 +11,15 @@
 	</header>
 	<main>
 		<div>index</div>
-		<p>
+		<div>{{date date1}}</div>
+		<div>{{date date2}}</div>
+		<div>{{date date3}}</div>
+		<div>
+			{{year}}
+		</div>
+		{{!-- <p>
 			{{{link 'http://www.google.ru' 'главная'}}}
-		</p>
+		</p> --}}
 		{{!-- <div>
 			<ul>
 				{{#each purchases}}
