display the result near the form

--- a/views/form.hbs
+++ b/views/form.hbs
@@ -6,12 +6,16 @@
 </head>
 
 <body>
-    <form action="/target/" method="GET">
+    <form action="" method="GET">
         <input name="test1">
         <input name="test2">
         <input name="test3">
         <input type="submit">
     </form>
+
+    {{#if sum}}
+    {{sum}}
+    {{/if}}
 </body>
 
 </html>
