--- a/views/form.hbs
+++ b/views/form.hbs
@@ -7,6 +7,15 @@
 
 <body>
     <form action="" method="GET">
+        <input name="name" value="{{query.name}}">
+        <input name="age" value="{{query.age}}">
+        <input name="salary" value="{{query.salary}}">
+        <input type="submit">
+    </form>
+
+
+
+    {{!-- <form action="" method="GET">
         <input name="test1">
         <input name="test2">
         <input name="test3">
@@ -15,7 +24,7 @@
 
     {{#if sum}}
     {{sum}}
-    {{/if}}
+    {{/if}} --}}
 </body>
 
 </html>
