Separate receiving and submitting a form in Express

--- a/views/form.hbs
+++ b/views/form.hbs
@@ -7,13 +7,26 @@
 
 <body>
     <form action="" method="GET">
+        <input name="test1">
+        <input name="test2">
+        <input name="test3">
+        <input name="test4">
+        <input name="test5">
+        <input type="submit" name="submit">
+    </form>
+    <div>
+        {{sum}}
+    </div>
+
+
+
+
+    {{!-- <form action="" method="GET">
         <input name="name" value="{{query.name}}">
         <input name="age" value="{{query.age}}">
         <input name="salary" value="{{query.salary}}">
         <input type="submit">
-    </form>
-
-
+    </form> --}}
 
     {{!-- <form action="" method="GET">
         <input name="test1">
