Hiding a form after submitting it in Express

--- a/views/form.hbs
+++ b/views/form.hbs
@@ -6,7 +6,18 @@
 </head>
 
 <body>
+
+
+    {{!-- {{#if query.submit}}
+    <div>HELLO {{query.name}}</div>
+    {{else}}
     <form action="" method="GET">
+        <input name="name">
+        <input type="submit" name="submit">
+    </form>
+    {{/if}} --}}
+
+    {{!-- <form action="" method="GET">
         <input name="test1">
         <input name="test2">
         <input name="test3">
@@ -16,10 +27,7 @@
     </form>
     <div>
         {{sum}}
-    </div>
-
-
-
+    </div> --}}
 
     {{!-- <form action="" method="GET">
         <input name="name" value="{{query.name}}">
