--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,14 +5,14 @@
 	</head>
 	<body>
 		<header>
-			header
+			{{!-- header --}}
 		</header>
 		<main>
 			{{{body}}}
-			<div>Hello main</div>
+			{{!-- <div>Hello main</div> --}}
 		</main>
 		<footer>
-			footer
+			{{!-- footer --}}
 		</footer>
 	</body>
 </html>
