--- a/views/form.hbs
+++ b/views/form.hbs
@@ -6,6 +6,13 @@
 </head>
 
 <body>
+    <form action="/target/" method="post">
+        <input name="name" placeholder="Name">
+        <input name="country" placeholder="Country">
+        <input name="city" placeholder="City">
+        <input type="submit">
+    </form>
+
 
 
     {{!-- {{#if query.submit}}
