--- a/views/form.hbs
+++ b/views/form.hbs
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <form action="/target/" method="post">
+    <form action="/" method="post">
         <input name="name" placeholder="Name">
         <input name="country" placeholder="Country">
         <input name="city" placeholder="City">
