save form value after POST in express

--- a/views/form.hbs
+++ b/views/form.hbs
@@ -6,14 +6,22 @@
 </head>
 
 <body>
-    <form action="/" method="post">
+    {{!-- <form action="/" method="post">
+        <p>Login</p>
+        <input name="login" value="{{body.login}}">
+        <p>Password</p>
+        <input name="password" value="{{body.password}}">
+        <p>e-mail</p>
+        <input name="e-mail" value="{{body.e-mail}}">
+        <input type="submit">
+    </form> --}}
+
+    {{!-- <form action="/" method="post">
         <input name="name" placeholder="Name">
         <input name="country" placeholder="Country">
         <input name="city" placeholder="City">
         <input type="submit">
-    </form>
-
-
+    </form> --}}
 
     {{!-- {{#if query.submit}}
     <div>HELLO {{query.name}}</div>
