textarea in express

--- a/views/form.hbs
+++ b/views/form.hbs
@@ -6,6 +6,12 @@
 </head>
 
 <body>
+    <form action="/" method="post">
+        <textarea name="review" cols="30" rows="10"></textarea>
+        <input type="submit">
+    </form>
+
+
     {{!-- <form action="/" method="post">
         <p>Login</p>
         <input name="login" value="{{body.login}}">
