--- a/views/form.hbs
+++ b/views/form.hbs
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-    <form action="/" method="post">
-        <textarea name="review" cols="30" rows="10"></textarea>
+    {{!-- <form action="/" method="post">
+        <textarea name="review" cols="30" rows="10">{{body.review}}</textarea>
         <input type="submit">
-    </form>
-
+        <div>{{body.review}}</div>
+    </form> --}}
 
     {{!-- <form action="/" method="post">
         <p>Login</p>
