--- a/views/form.hbs
+++ b/views/form.hbs
@@ -7,6 +7,20 @@
 
 <body>
     <form action="/" method="post">
+        <div>Input your name</div>
+        <input type="text">
+        <input type="checkbox" name="flag">
+        <input type="submit" name="submit">
+    </form>
+    {{#if body.submit}}
+    {{#if body.flag}}
+    <p>Hello</p>
+    {{else}}
+    <p>Bye</p>
+    {{/if}}
+    {{/if}}
+
+    {{!-- <form action="/" method="post">
         <input type="checkbox" name="flag">
         <input type="text">
         <input type="submit" name="submit">
@@ -17,7 +31,7 @@
     {{else}}
     <p>NO</p>
     {{/if}}
-    {{/if}}
+    {{/if}} --}}
 
     {{!-- <form action="/" method="post">
         <textarea name="review" cols="30" rows="10">{{body.review}}</textarea>
