--- a/views/form.hbs
+++ b/views/form.hbs
@@ -6,7 +6,18 @@
 </head>
 
 <body>
-    <form action="/" method="post">
+    {{!-- <form action="/" method="post">
+        <div>MALE</div>
+        <input type="radio" name="radio" value="male">
+        <div>FEMALE</div>
+        <input type="radio" name="radio" value="female">
+        <input type="submit">
+    </form>
+    <div>
+        {{body}}
+    </div> --}}
+
+    {{!-- <form action="/" method="post">
         <div>18 age?</div>
         <input type="checkbox" name="flag">
         <input type="submit" name="submit">
@@ -17,7 +28,7 @@
     {{else}}
     <p>Access is denied</p>
     {{/if}}
-    {{/if}}
+    {{/if}} --}}
 
     {{!-- <form action="/" method="post">
         <div>Input your name</div>
