--- a/views/form.hbs
+++ b/views/form.hbs
@@ -6,6 +6,16 @@
 </head>
 
 <body>
+    {{!-- <form action="" method="POST">
+        <select name="test">
+            <option>Poland</option>
+            <option>Germany</option>
+            <option>Italy</option>
+        </select>
+        <input type="submit">
+    </form>
+    <h2>{{body}}</h2> --}}
+
     {{!-- <form action="/" method="post">
         <div>MALE</div>
         <input type="radio" name="radio" value="male">
